add protos configuration
Signed-off-by: Mauro Morales <contact@mauromorales.com>

--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -2,9 +2,15 @@ name: 'Build Homelab images'
 
 on:
   pull_request:
+    paths:
+      - 'images/Dockerfile'
   push:
     branches:
       - main
+    paths:
+      - 'images/Dockerfile'
+    tags:
+      - 'v*'
 
 permissions:
   contents: write
