Add GitHub Actions workflow for building Homelab images and add confi… (#2)
* Add GitHub Actions workflow for building Homelab images and add configuration files

- Introduce a new workflow to build and push Homelab images to Quay.
- Add cloud-config.yaml for Protos configuration.
- Create Dockerfile for building the Ubuntu 24.04 image with necessary packages and k9s installation.

* Update protos.yaml

* Add GitHub Actions workflow for building Homelab images and update Dockerfile

- Introduce a new workflow to automate the building and pushing of Homelab images to Quay.
- Update Dockerfile to install k9s in /usr/bin instead of /usr/local/bin to ensure availability in the Kairos environment.

* Enhance cloud-config.yaml and Dockerfile for k0s kubeconfig management

- Add scripts to generate, export, and save k0s kubeconfig for root user.
- Create systemd services to automate the execution of these scripts.
- Update Dockerfile to remove k9s installation, as it is now handled in cloud-config.yaml.

* factory v0.0.5

* use /usr/local/bin in the cloud-config

* Enhance cloud-config.yaml for k0s kubeconfig management

- Update the script to generate kubeconfig without suppressing errors.
- Introduce systemd path units to watch for changes in k0s admin.conf and kubeconfig.yaml.
- Modify service dependencies to ensure proper execution order.
- Update symlink creation for new path units to enable automated management of kubeconfig.

* do everything in one script

* Enhance kubeconfig generation and external storage synchronization in cloud-config.yaml

- Add checks for the existence and content of admin.conf before generating kubeconfig.
- Implement comparison and update logic for kubeconfig against external storage.
- Improve logging for kubeconfig management steps.
- Adjust systemd service parameters for better reliability.

* rename grub entry to ProtOS

* build also kairos only

Signed-off-by: Mauro Morales <contact@mauromorales.com>

* readme

Signed-off-by: Mauro Mor

--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -6,7 +6,11 @@ on:
       - 'main'
     tags:
       - 'v*'
+    paths:
+      - 'nodes/protos/**'
   pull_request:
+    paths:
+      - 'nodes/protos/**'
 
 permissions:
   contents: write
@@ -14,7 +18,7 @@ permissions:
   id-token: write
   actions: read
 jobs:
-  base:
+  ubuntu:
     name: Base Image
     runs-on: ubuntu-latest
     steps:
@@ -34,14 +38,14 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           platforms: linux/amd64, linux/arm64
-          file: images/Dockerfile
+          file: nodes/protos/Dockerfile
           tags: quay.io/mauromorales/ubuntu:24.04-${{ github.sha }}
           push: true
 
-  kairos:
+  protos:
     name: Kairos Factory
-    needs: base
-    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@main
+    needs: ubuntu
+    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@v0.0.6
     secrets:
       registry_username: ${{ secrets.REGISTRY_USERNAME }}
       registry_password: ${{ secrets.REGISTRY_PASSWORD }}
@@ -54,9 +58,35 @@ jobs:
       grype: true
       registry_domain: "quay.io"
       registry_namespace: "mauromorales"
-      registry_repository: "logos"
+      registry_repository: "protos"
       summary_artifacts: true
       kubernetes_distro: "k0s"
       kubernetes_version: "v1.33.3+k0s.0"
       custom_tag_format: "$VERSION"
-      custom_artifact_format: "logos-$VERSION"
+      custom_artifact_format: "protos-$VERSION"
+      custom_job_name_format: "protos"
+      cloud_config: nodes/protos/cloud-config.yaml
+
+  kairos:
+    name: Kairos Factory
+    needs: ubuntu
+    uses: kairos-io/kairos-factory-action/.github/workflows/reusable-factory.yaml@v0.0.6
+    secrets:
+      registry_username: ${{ secrets.REGISTRY_USERNAME }}
+      registry_password: ${{ secrets.REGISTRY_PASSWORD }}
+    with:
+      base_image: quay.io/mauromorales/ubuntu:24.04-${{ github.sha }}
+      model: "generic"
+      arch: "amd64"
+      version: "auto"
+      iso: true
+      grype: true
+      registry_domain: "quay.io"
+      registry_namespace: "mauromorales"
+      registry_repository: "kairos"
+      summary_artifacts: true
+      kubernetes_distro: "k0s"
+      kubernetes_version: "v1.33.3+k0s.0"
+      custom_tag_format: "$KAIROS_VERSION"
+      custom_artifact_format: "kairos-$KAIROS_VERSION"
+      custom_job_name_format: "kairos"
